# python-assignment

./: .gitignore  1.py  10.py  11.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  README.md  example.txt  pyproject.toml  requirements.txt
OOPs/: 1&2class.py  12concrete_class.py  13interface.py  14static_methods.py  3inheritance.py  4encapsulation.py  5abstraction.py  6polymorphism.py  7access_modifiers.py  8association.py  9aggregation.py
assigment/: exceptions_assertions.py  file_io.py  higher_order_functions.py  units_and_adt.py
assignment1/: inheritance_oop.py  sorting_merging.py
assignment_project/: 1.py  3(ADT).py
objects/: part1_class_anatomy.py  part2_collections.py  part3_operations.py
projects/: 1main.py  3elecricitybill.py  4areaofLecturehall.py  5explenseofwarer.py  6solveequation.py
src/: __init__.py
src/algorithms/: 10_sieve_of_eratosthenes.py  12_tower_of_hanoi.py  2_class_basics.py  8_iterators_recursion.py  9_search_algorithms.py  __init__.py
src/basics/: 10_string_methods_demo.py  11_extract_list_element.py  1_simple_interest.py  2_largest_of_three.py  3_factorial_recursive.py  4_fibonacci_series.py  5_sum_of_digits.py  6_largest_in_list.py  7_sum_of_collection.py  8_list_tuple_operations.py  9_string_slicing.py  __init__.py
src/oop/: 10_abstract_class.py  14_anonymous_class.py  16_collections.py  17_operations.py  9_composition.py  __init__.py
src/projects/: 2_area_lab.py  7_multiply.py  __init__.py
