[project]
name = "python-assignment"
version = "1.0.0"
description = "Python learning repository with examples and tutorials"
authors = [{name = "Legend-Vipin"}]
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/Legend-Vipin/python-assignment"
Repository = "https://github.com/Legend-Vipin/python-assignment"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
